# SNN-air-pollution

./: README.md  pyproject.toml  requirements.txt
data/processed/: pollution-weather.csv  pollution_weather.csv  target06.csv  target12.csv  target24.csv  target_daily.csv
data/raw/: 2021_DANE_1H.csv  column_names.txt  s_t_375_2021.csv
notebooks/: Example Notebook.ipynb  advanced-perceptron.ipynb  correlation.ipynb  data-processing.ipynb  data-target-preparation.ipynb  data_processing.ipynb  dataset_properties.ipynb  hyperparameter_tuning.ipynb  profiling.ipynb  simple-perceptron.ipynb  simple-snn-linearout.ipynb  simple-snn.ipynb  snn-classifier.ipynb  test.ipynb  train_averages.ipynb  training_dataset06.ipynb  training_dataset12.ipynb  training_stats.ipynb
project_name/visualization/: visualize.py
src/: error_measures.py  graphs.py  models.py  train_model.py
src/data/: make_dataset.py
src/models/: TwoLayerLeakySNN.py  TwoLayerPerceptron.py  error_measures.py
tests/: test_make_dataset.py
