[tool.poetry]
name = "snn-pollution"
version = "0.1.0"
description = ""
authors = ["apiekarz <a.piekarzewicz@stud.elka.pw.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.4.1"
torch = [
    {url="https://download.pytorch.org/whl/cu116/torch-1.12.0%2Bcu116-cp39-cp39-win_amd64.whl", platform="win64"},
    {url="https://download.pytorch.org/whl/cu116/torch-1.12.0%2Bcu116-cp39-cp39-linux_x86_64.whl", platform="linux"}
]
snntorch = "^0.5.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
